--- a/index.html
+++ b/index.html
@@ -118,7 +118,18 @@
 						<td>
 							<select id="select_model" onchange="updateInit();" >
 									<option value="Beths">Beths (Propofol)</option>
+									<option value="Cattai-Propofol">Cattai (Propofol)</option>
 									<option value="Cattai-Fentanyl">Cattai (Fentanyl)</option>
+							</select>
+						</td>
+					</tr>
+					<tr id="row_premed">
+						<td>Premed
+						</td>
+						<td>
+							<select id="select_premed" onchange="" >
+									<option value="0">No</option>
+									<option value="1">Yes ()</option>
 							</select>
 						</td>
 					</tr>
